[package]
name = "audio_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
futures = "0.3.25"
minimp3 = { version = "0.5.1", features = ["async_tokio"] }
reqwest = { version = "0.11.13", features = ["stream"] }
rodio = "0.16.0"
tempfile = "3.3.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = "0.7.4"
